# python-bileanclient

./: .gitignore  .gitreview  .testr.conf  AUTHORS  CONTRIBUTING.rst  ChangeLog  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
bileanclient/: __init__.py  _i18n.py  client.py  exc.py  shell.py
bileanclient/common/: http.py  utils.py
bileanclient/openstack/common/: cliutils.py
bileanclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
bileanclient/tests/unit/: test_http.py  test_shell.py  test_utils.py  utils.py
bileanclient/tests/unit/v1/: test_resource.py
bileanclient/v1/: __init__.py  client.py  policies.py  resources.py  rules.py  shell.py  users.py
doc/: Makefile
doc/source/: conf.py  index.rst
doc/source/man/: bilean.rst
tools/: bilean.bash_completion
