[metadata]
name = python-bileanclient
summary = OpenStack Billing API Client Library
description-file = README.rst
author = OpenStack
author-email = dongbing.lv@kylin-cloud.com
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages = bileanclient

[entry_points]
console_scripts =
    bilean = bileanclient.shell:main

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = bileanclient/locale
domain = bileanclient

[update_catalog]
domain = bileanclient
output_dir = bileanclient/locale
input_file = bileanclient/locale/bileanclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = bileanclient/locale/bileanclient.pot

[wheel]
universal = 1
